--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Expenses Tracker</string>
-    <string name="item_name">Item name</string>
+    <string name="item_name">Item Name</string>
     <string name="price">Price</string>
     <string name="enter_item">Enter item</string>
     <string name="add">Add</string>
@@ -12,4 +12,5 @@
     <string name="Please_enter_price">Please enter price</string>
     <string name="Are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item</string>
     <string name="Updating_item">Updating Item</string>
+    <string name="items">Items</string>
 </resources>
